--- a/app/views/coinsystem.scala.html
+++ b/app/views/coinsystem.scala.html
@@ -45,8 +45,8 @@
                             <i class="calendar icon"></i>
                             @workEntry.dateDone.toString("dd.MM.yyyy", lang.toLocale)
                         </div>
-                        <div class="header">@workEntry.area</div>
-                        <div class="meta">@workEntry.areaDetail</div>
+                        <div class="header">@workEntry.areaDetail</div>
+                        <div class="meta">@workEntry.area</div>
 
                         <div class="description">
                             @workEntry.description
@@ -59,6 +59,7 @@
                         @workEntry.coins
                         <div class="right floated coins">
                             <!--<a href="/coin/remove/@workEntry.id"><i class="remove icon"></i></a>-->
+                            <a href="/coin/copy/@workEntry.id"><i class="copy icon"></i></a>
                             <a href="/coin/edit/@workEntry.id"><i class="edit icon"></i></a>
                             <i class="remove icon" onclick="showDeletePopup(@workEntry.id)"></i>
                         </div>
