impl support for cinema shortcut

--- a/app/views/common/mainMenu.scala.html
+++ b/app/views/common/mainMenu.scala.html
@@ -28,6 +28,7 @@
     <a class='@activeLink("/forum") item' href="@Links.forum.url" target="@Links.forum.target"><i class="book icon"></i>@Messages("apps.forum")</a>
     <a class='@activeLink("/coin") item' href="/coin"><i class="thumbs up icon"></i>@Messages("apps.coin")</a>
     <a class='@activeLink("/kanban") item' href="/kanban"><i class="columns icon"></i>@Messages("apps.kanban")</a>
+    <a class='@activeLink("/kino") item' href="/kino"><i class="film icon"></i>@Messages("apps.kino")</a>
     <!--<a class='@activeLink("/chat") item' href="/chat"><i class="chat icon"></i>@Messages("apps.chat")</a>-->
     <a class='@activeLink("/carsharing") item' href="/carsharing"><i class="car icon"></i>@Messages("apps.carsharing")</a>
 </div>
@@ -49,6 +50,7 @@
             <div class="menu">
                 <a class='@activeLink("/coin") item' href="/coin"><i class="thumbs up icon"></i>@Messages("apps.coin")</a>
                 <a class='@activeLink("/kanban") item' href="/kanban"><i class="columns icon"></i>@Messages("apps.kanban")</a>
+                <a class='@activeLink("/kino") item' href="/kino"><i class="film icon"></i>@Messages("apps.kino")</a>
                 <!--<a class='@activeLink("/chat") item' href="/chat"><i class="chat icon"></i>@Messages("apps.chat")</a>-->
                 <a class='@activeLink("/carsharing") item' href="/carsharing"><i class="car icon"></i>@Messages("apps.carsharing")</a>
             </div>
