--- a/app/views/form/forminput.scala.html
+++ b/app/views/form/forminput.scala.html
@@ -1,4 +1,4 @@
-@(elements: helper.FieldElements)
+@(elements: views.html.helper.FieldElements)
 
 <div class="field @if(elements.hasErrors) {error}">
     <label for="@elements.id">@elements.label</label>
