--- a/app/views/nopassword.scala.html
+++ b/app/views/nopassword.scala.html
@@ -1,19 +1,20 @@
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
+@import play.api.data.Form
 @import views.html.common._
 
 @(signInForm: Form[forms.NoPasswordForm.Data], uid: String)(implicit request: RequestHeader, messages: Messages)
-
-@import com.mohiva.play.silhouette.impl.providers.oauth2.ClefProvider
 
 @mainLayout(title = Messages("sign.in.title")) {
 <div class="ui middle aligned center aligned grid login-page">
     <div class="column login-column">
         <h2 class="ui center aligned header">
-            <img src='@routes.Assets.at("images/wvg_logo_quad.png")' class="ui tiny image">
+            <img src='@controllers.routes.Assets.at("images/wvg_logo_quad.png")' class="ui tiny image">
             <div class="content">
                 @Messages("sign.in.no.password")
             </div>
         </h2>
-        @helper.form(action = routes.LdapController.nopassword, 'class -> "ui large form" ) {
+        @helper.form(action = controllers.routes.LdapController.nopassword, 'class -> "ui large form" ) {
         @helper.CSRF.formField
         <div class="ui segment">
             <div class="field">
