--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -1,4 +1,6 @@
 @import views.html.common._
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
 
 @(user: models.User)(implicit request: RequestHeader, messages: Messages)
 
