--- a/app/views/coin/coinEntryForm.scala.html
+++ b/app/views/coin/coinEntryForm.scala.html
@@ -1,3 +1,8 @@
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
+@import play.api.data.Form
+@import views.html.helper
+@import play.api.templates.PlayMagic._
 @import forms.CoinAddForm
 @import models.coin.WorkEntry
 @import forms.common.SemanticForms._
