--- a/app/views/common/mainLayout.scala.html
+++ b/app/views/common/mainLayout.scala.html
@@ -1,3 +1,7 @@
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
+@import play.twirl.api.Html
+
 @(title: String, head: Html = Html("<div></div>"))(body: Html)(implicit request: RequestHeader, messages: Messages)
 
 <html lang="de">
