--- a/app/views/common/mainMenu.scala.html
+++ b/app/views/common/mainMenu.scala.html
@@ -1,3 +1,5 @@
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
 @import models.config.Links
 
 @(user: Option[models.User] = None)(implicit request: RequestHeader, messages: Messages)
@@ -58,8 +60,8 @@
             <div class="ui top pointing dropdown main-menu right item">
                 <i class="caret down icon"></i>@u.fullName
                 <div class="menu">
-                    <a class="item" href="@routes.ApplicationController.profile"><i class="user icon"></i>@Messages("profile.title")</a>
-                    <a class="item" href="@routes.ApplicationController.signOut"><i class="sign out icon"></i>@Messages("sign.out")</a>
+                    <a class="item" href="@controllers.routes.ApplicationController.profile"><i class="user icon"></i>@Messages("profile.title")</a>
+                    <a class="item" href="@controllers.routes.ApplicationController.signOut"><i class="sign out icon"></i>@Messages("sign.out")</a>
                 </div>
             </div>
             }
