--- a/app/views/common/sideMenu.scala.html
+++ b/app/views/common/sideMenu.scala.html
@@ -1,3 +1,6 @@
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
+
 @()(implicit request: RequestHeader, messages: Messages)
 
 @activeLink(currentPath:String) = @{
