--- a/app/views/email.scala.html
+++ b/app/views/email.scala.html
@@ -1,3 +1,6 @@
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
+@import play.api.data.Form
 @import views.html.common._
 
 @(user: models.User, emailForm: Form[forms.EmailForm.Data])(implicit request: RequestHeader, messages: Messages)
@@ -12,7 +15,7 @@
             </div>
             <div class="ten wide column">
                 <h2 class="ui header">@Messages("email.title")</h2>
-                @helper.form(action = routes.LdapController.email(), 'class -> "ui form" ) {
+                @helper.form(action = controllers.routes.LdapController.email(), 'class -> "ui form" ) {
                 @helper.CSRF.formField
                 <form class="ui form">
                     <div class="field">
