--- a/app/views/iframe.scala.html
+++ b/app/views/iframe.scala.html
@@ -1,3 +1,5 @@
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
 @import views.html.common._
 
 @(user: models.User, url: String)(implicit request: RequestHeader, messages: Messages)
