--- a/app/views/password.scala.html
+++ b/app/views/password.scala.html
@@ -1,3 +1,6 @@
+@import play.api.i18n.Messages
+@import play.api.mvc.RequestHeader
+@import play.api.data.Form
 @import views.html.common._
 
 @(user: models.User, passwordForm: Form[forms.PasswordForm.Data])(implicit request: RequestHeader, messages: Messages)
@@ -12,7 +15,7 @@
             </div>
             <div class="ten wide column">
                 <h2 class="ui header">@Messages("password.title")</h2>
-                @helper.form(action = routes.LdapController.password(), 'class -> "ui form" ) {
+                @helper.form(action = controllers.routes.LdapController.password(), 'class -> "ui form" ) {
                 @helper.CSRF.formField
                 <form class="ui form">
                     <div class="field">
