--- a/app/views/common/mainMenu.scala.html
+++ b/app/views/common/mainMenu.scala.html
@@ -28,6 +28,7 @@
     <a class='@activeLink("/calendar") item' href="/calendar"><i class="calendar icon"></i>@Messages("apps.calendar")</a>
     <a class='@activeLink("/directory") item' href="/directory"><i class="users icon"></i>@Messages("apps.directory")</a>
     <a class='@activeLink("/forum") item' href="@Links.forum.url" target="@Links.forum.target"><i class="book icon"></i>@Messages("apps.forum")</a>
+    <a class='@activeLink("/coin") item' href="/coin"><i class="heartbeat icon"></i>@Messages("apps.issue")</a>
     <a class='@activeLink("/coin") item' href="/coin"><i class="thumbs up icon"></i>@Messages("apps.coin")</a>
     <a class='@activeLink("/kanban") item' href="/kanban"><i class="columns icon"></i>@Messages("apps.kanban")</a>
     <a class='@activeLink("/kino") item' href="/kino"><i class="film icon"></i>@Messages("apps.kino")</a>
@@ -51,6 +52,7 @@
             <i class="caret down icon"></i>@Messages("menu.more")
             <div class="menu">
                 <a class='@activeLink("/coin") item' href="/coin"><i class="thumbs up icon"></i>@Messages("apps.coin")</a>
+                <a class='@activeLink("/coin") item' href="/coin"><i class="heartbeat icon"></i>@Messages("apps.issue")</a>
                 <a class='@activeLink("/kanban") item' href="/kanban"><i class="columns icon"></i>@Messages("apps.kanban")</a>
                 <a class='@activeLink("/kino") item' href="/kino"><i class="film icon"></i>@Messages("apps.kino")</a>
                 <!--<a class='@activeLink("/chat") item' href="/chat"><i class="chat icon"></i>@Messages("apps.chat")</a>-->
